# miv_rviz_panel

./: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
include/miv_rviz_plugin/: multiview_panel.h  multiview_panel.hpp
src/: multiview_panel.cpp
